[gd_scene load_steps=15 format=3 uid="uid://bx2ab51bychng"]

[ext_resource type="Theme" uid="uid://cdpahudvr7n3t" path="res://ui/Ui.tres" id="1_nbjew"]
[ext_resource type="Script" path="res://scripts/textBox.gd" id="1_p0uq2"]
[ext_resource type="Texture2D" uid="uid://cpfwf80v78ypw" path="res://ui/bubble.png" id="2_sf68p"]
[ext_resource type="Texture2D" uid="uid://4pmj1dkvslws" path="res://ui/tail.png" id="3_q0iww"]
[ext_resource type="Texture2D" uid="uid://cp7x265qm68g1" path="res://ui/SpinArrow.png" id="4_yby1x"]
[ext_resource type="FontFile" uid="uid://cj8rhodwww8xo" path="res://ui/Millennia-Regular.otf" id="5_2cq85"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_rcusm"]
light_mode = 1

[sub_resource type="AtlasTexture" id="AtlasTexture_bym5k"]
atlas = ExtResource("4_yby1x")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypyw5"]
atlas = ExtResource("4_yby1x")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_iblj8"]
atlas = ExtResource("4_yby1x")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7bmhn"]
atlas = ExtResource("4_yby1x")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkrlj"]
atlas = ExtResource("4_yby1x")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5fr08"]
atlas = ExtResource("4_yby1x")
region = Rect2(32, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_wsi16"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bym5k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypyw5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iblj8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7bmhn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkrlj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5fr08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkrlj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7bmhn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iblj8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypyw5")
}],
"loop": true,
"name": &"Spin",
"speed": 10.0
}]

[node name="TextBox" type="MarginContainer"]
top_level = true
z_index = 15
material = SubResource("CanvasItemMaterial_rcusm")
offset_right = 32.0
offset_bottom = 32.0
theme = ExtResource("1_nbjew")
script = ExtResource("1_p0uq2")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
use_parent_material = true
layout_mode = 2
texture = ExtResource("2_sf68p")
region_rect = Rect2(0, 0, 48, 48)
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="Control" type="Control" parent="NinePatchRect"]
use_parent_material = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 20.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="Sprite2D" type="Sprite2D" parent="NinePatchRect/Control"]
use_parent_material = true
position = Vector2(-20, 5)
texture = ExtResource("3_q0iww")

[node name="Control2" type="Control" parent="NinePatchRect"]
use_parent_material = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0

[node name="NextIndicator" type="AnimatedSprite2D" parent="NinePatchRect/Control2"]
visible = false
texture_filter = 1
use_parent_material = true
position = Vector2(-5, -8)
sprite_frames = SubResource("SpriteFrames_wsi16")
animation = &"Spin"
autoplay = "Spin"
frame = 1
frame_progress = 0.654909
metadata/_aseprite_wizard_config_ = {
"layer": "Arrow",
"o_ex_p": "",
"o_folder": "res://ui",
"o_name": "Spin",
"only_visible": true,
"op_exp": true,
"source": "res://ui/spin.aseprite"
}

[node name="MarginContainer" type="MarginContainer" parent="."]
use_parent_material = true
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Label" type="Label" parent="MarginContainer"]
use_parent_material = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_2cq85")
vertical_alignment = 1

[node name="LetterDisplayTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="LetterDisplayTimer" to="." method="_on_letter_display_timer_timeout"]
